--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host app.document-tracker.test --port 3001",
     "build": "vitepress build docs && vue-tsc && vite build",
     "preview": "vite preview",
     "docs:dev": "vitepress dev docs",
@@ -12,10 +12,20 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tanstack/vue-query": "^4.35.3",
+    "@vueuse/core": "^10.4.1",
+    "axios": "^1.5.0",
+    "vue": "^3.3.4",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.30",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vitepress": "1.0.0-rc.20",
