--- a/package.json
+++ b/package.json
@@ -12,23 +12,22 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.16",
-    "@heroicons/vue": "^2.0.18",
-    "@tailwindcss/forms": "^0.5.6",
-    "@tanstack/vue-query": "^4.35.3",
-    "@vueuse/core": "^10.4.1",
-    "axios": "^1.5.0",
-    "vue": "^3.3.4",
-    "vue-router": "4"
+    "@headlessui/vue": "^1.7.19",
+    "@heroicons/vue": "^2.1.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/vue-query": "^5.28.7",
+    "@vueuse/core": "^10.9.0",
+    "axios": "^1.6.8",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.30",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vitepress": "1.0.0-rc.20",
-    "vue-tsc": "^1.8.5"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.6",
+    "vue-tsc": "^2.0.7"
   }
 }
