added listing documents

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@tanstack/vue-query": "^5.28.7",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
+    "luxon": "^3.5.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
